# xor-based-vigenere-cipher

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.c
include/: CMakeLists.txt
include/vigenere-cipher/: vigenere-cipher.h
src/: CMakeLists.txt  vigenere-cipher.c
